[package]
name = "tft_search"
version = "0.1.0"
authors = ["Tom Chiu <ms0705718@gmail.com>"]
edition = "2018"

[profile.release]

[profile.dev]

[dependencies]
clap = "2"
reqwest = "0.11.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.8"
